--- a/gatsbyBlog_8/index.html
+++ b/gatsbyBlog_8/index.html
@@ -588,6 +588,25 @@
   top: 200px;
   background-color: #555
 }
+.headerContainer {
+  position: fixed;
+  top: 0;
+  z-index: 1;
+  width: 100%;
+  background-color: #f1f1f1;
+}
+/* The progress container (grey background) */
+.progress-container {
+  width: 100%;
+  height: 8px;
+  background: #ccc;
+}
+/* The progress bar (scroll indicator) */
+.progress-bar {
+  height: 8px;
+  background: #04AA6D;
+  width: 0%;
+}
 </style>
 <table>
 <thead>
